--- a/uicorek/src/main/res/values/styles.xml
+++ b/uicorek/src/main/res/values/styles.xml
@@ -15,19 +15,6 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
-    <style name="Edit_Style">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:paddingStart">@dimen/dp_010</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:gravity">start|center_vertical</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:paddingEnd">@dimen/dp_010</item>
-        <item name="android:cursorVisible">true</item>
-        <item name="android:selectAllOnFocus">true</item>
-        <item name="android:textIsSelectable">true</item>
-    </style>
-
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap" />
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014.Width_Wrap" />
@@ -62,17 +49,33 @@
         <item name="android:textSize">@dimen/sp_18</item>
     </style>
 
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_020">
+        <item name="android:textSize">@dimen/sp_20</item>
+    </style>
+
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000">
         <item name="android:textColor">@color/ui_gray_000</item>
     </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal" />
 
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_014">
+        <item name="android:textSize">@dimen/sp_14</item>
+    </style>
+
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_020">
         <item name="android:textSize">@dimen/sp_20</item>
     </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_000.Size_020">
+        <item name="android:textSize">@dimen/sp_20</item>
+    </style>
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_000">
+        <item name="android:textColor">@color/ui_gray_000</item>
+    </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold">
         <item name="android:textStyle">bold</item>
@@ -81,6 +84,23 @@
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center" />
 
     <style name="Txt_Style.Font_Sans_Serif" />
+
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--///Edit_Style-->
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <style name="Edit_Style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingStart">@dimen/dp_010</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:paddingEnd">@dimen/dp_010</item>
+        <item name="android:cursorVisible">true</item>
+        <item name="android:selectAllOnFocus">true</item>
+        <item name="android:textIsSelectable">true</item>
+    </style>
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
     <!--///Btn_Style-->
@@ -99,7 +119,23 @@
 
     <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_040" />
 
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_060">
+        <item name="android:layout_height">@dimen/dp_060</item>
+    </style>
+
     <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat" />
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_War">
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_040">
+        <item name="android:layout_height">@dimen/dp_040</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War">
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 
     <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10" />
 
