--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="dp_006">6dp</dimen>
     <dimen name="dp_008">8dp</dimen>
     <dimen name="dp_010">10dp</dimen>
+    <dimen name="dp_012">12dp</dimen>
     <dimen name="dp_015">15dp</dimen>
     <dimen name="dp_016">16dp</dimen>
     <dimen name="dp_017">17dp</dimen>
