--- a/basicktest/src/main/res/layout/activity_elemk_androidx.xml
+++ b/basicktest/src/main/res/layout/activity_elemk_androidx.xml
@@ -7,18 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:context=".elemk.androidx.ElemKAndroidXActivity">
 
         <com.google.android.material.button.MaterialButton
             style="@style/Btn_Style"
-            android:onClick="goElemKAndroid"
-            android:text="goElemKAndroid"
-            tools:ignore="HardcodedText,UsingOnClickInXml" />
-
-        <com.google.android.material.button.MaterialButton
-            style="@style/Btn_Style"
-            android:onClick="goElemKAndroidX"
-            android:text="goElemKAndroidX"
+            android:onClick="goElemKVBVM"
+            android:text="goElemKVBVM"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
     </LinearLayout>
