--- a/basicktest/src/main/res/layout/activity_elemk_vbvm.xml
+++ b/basicktest/src/main/res/layout/activity_elemk_vbvm.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="elemk_vbvm"
-            type="com.mozhimen.basicktest.elemk.viewmodel.ElemKViewModel" />
+            type="com.mozhimen.basicktest.elemk.androidx.ElemKViewModel" />
     </data>
 
     <LinearLayout
@@ -18,32 +18,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@{elemk_vbvm.uiNum}"
+            android:text="@{elemk_vbvm.lv_num}"
             tools:ignore="HardcodedText" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/elemk_vbvm_btn"
             style="@style/Btn_Style"
             android:text="ADD NUM"
+            android:onClick="@{()->elemk_vbvm.addNum()}"
             tools:ignore="HardcodedText" />
 
         <fragment
             android:id="@+id/elemk_vbvm_fragment_vb"
-            android:name="com.mozhimen.basicktest.elemk.fragment.ElemKFragmentVB"
+            android:name="com.mozhimen.basicktest.elemk.androidx.ElemKFragmentVB"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
         <fragment
             android:id="@+id/elemk_vbvm_fragment_vbvm"
-            android:name="com.mozhimen.basicktest.elemk.fragment.ElemKFragmentVBVM"
+            android:name="com.mozhimen.basicktest.elemk.androidx.ElemKFragmentVBVM"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
         <fragment
             android:id="@+id/elemk_vbvm_fragment_dialog_vbvm"
-            android:name="com.mozhimen.basicktest.elemk.fragment.ElemKDialogFragmentVB"
+            android:name="com.mozhimen.basicktest.elemk.androidx.ElemKDialogFragmentVB"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
