--- a/basicktest/src/main/res/layout/activity_basick.xml
+++ b/basicktest/src/main/res/layout/activity_basick.xml
@@ -34,6 +34,12 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Btn_Style"
+                android:onClick="goImageK"
+                android:text="goImageK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Btn_Style"
                 android:onClick="goManifestK"
                 android:text="goManifestK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
