--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -46,5 +46,7 @@
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_130">130dp</dimen>
     <dimen name="dp_140">140dp</dimen>
+    <dimen name="dp_160">160dp</dimen>
+    <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_200">200dp</dimen>
 </resources>
