--- a/uicorek/src/main/res/values/styles.xml
+++ b/uicorek/src/main/res/values/styles.xml
@@ -15,58 +15,96 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+
     <style name="Txt_Style.Font_Sans_Serif" />
+
+    <style name="Txt_Style.Font_Rubik_Regu">
+        <item name="android:fontFamily">@font/rubik_regular</item>
+    </style>
+
+    <style name="Txt_Style.Font_Ali_Puhuit">
+        <item name="android:fontFamily">@font/alibaba_puhuiti_regular</item>
+    </style>
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center" />
 
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center" />
+
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm" />
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm" />
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold">
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000">
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000">
         <item name="android:textColor">@color/ui_gray_000</item>
     </style>
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999" />
-
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999" />
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000">
+        <item name="android:textColor">@color/ui_gray_000</item>
+    </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_000">
         <item name="android:textColor">@color/ui_gray_000</item>
     </style>
 
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999" />
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Bold.Color_Gray_999" />
+
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014" />
-
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_013">
-        <item name="android:textSize">@dimen/sp_13</item>
-    </style>
-
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_012">
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_012">
         <item name="android:textSize">@dimen/sp_12</item>
     </style>
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_014" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_013">
+        <item name="android:textSize">@dimen/sp_13</item>
+    </style>
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_018">
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_013" >
+        <item name="android:textSize">@dimen/sp_13</item>
+    </style>
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_013" >
+        <item name="android:textSize">@dimen/sp_13</item>
+    </style>
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Bold.Color_Gray_999.Size_014" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_014" />
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_014" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_014" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_014" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_016">
+        <item name="android:textSize">@dimen/sp_16</item>
+    </style>
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_018">
         <item name="android:textSize">@dimen/sp_18</item>
     </style>
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_020">
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_020">
         <item name="android:textSize">@dimen/sp_20</item>
-    </style>
-
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_014">
-        <item name="android:textSize">@dimen/sp_14</item>
     </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_020">
@@ -79,27 +117,43 @@
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014.Width_Wrap" />
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_013.Width_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_012.Width_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_012.Width_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_013.Width_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_013.Width_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_014.Width_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_013.Width_Wrap" />
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_014.Width_Wrap" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_014.Width_Wrap" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_014.Width_Wrap" />
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_014.Width_Wrap" />
 
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_000.Size_020.Width_Wrap" />
+
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap" />
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_013.Width_Wrap.Height_Wrap" />
+
+    <style name="Txt_Style.Font_Rubik_Regu.Gravity_Center.Style_Norm.Color_Gray_000.Size_014.Width_Wrap.Height_Wrap" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap" />
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_012.Width_Wrap.Height_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_012.Width_Wrap.Height_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_013.Width_Wrap.Height_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_013.Width_Wrap.Height_Wrap" />
 
-    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_014.Width_Wrap.Height_Wrap" />
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_013.Width_Wrap.Height_Wrap" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_000.Size_014.Width_Wrap.Height_Wrap" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_000.Size_020.Width_Wrap.Height_Wrap" />
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
     <!--///Edit_Style-->
@@ -131,31 +185,52 @@
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_040.Back_Null" />
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_040" />
+    <style name="Btn_Style.Ellip_End" />
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_060">
-        <item name="android:layout_height">@dimen/dp_060</item>
-    </style>
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat" />
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null" />
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_War">
-        <item name="android:layout_height">wrap_content</item>
-    </style>
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_040">
-        <item name="android:layout_height">@dimen/dp_040</item>
-    </style>
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10" />
+
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
     <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War">
         <item name="android:layout_width">wrap_content</item>
     </style>
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10" />
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat" />
 
-    <style name="Btn_Style.Ellip_End.StateL_Anim_Null" />
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-    <style name="Btn_Style.Ellip_End" />
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_War">
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_040" />
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_040">
+        <item name="android:layout_height">@dimen/dp_040</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_050">
+        <item name="android:layout_height">@dimen/dp_050</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_War.Height_050">
+        <item name="android:layout_height">@dimen/dp_050</item>
+    </style>
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_060">
+        <item name="android:layout_height">@dimen/dp_060</item>
+    </style>
+
+    <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+    <style name="Btn_Style.Ellip_End.StateL_Anim_Null.PH_10.Width_Mat.Height_040.Back_Null" />
+
 </resources>
