--- a/uicorektest/src/main/res/layout/dialogk_tip.xml
+++ b/uicorektest/src/main/res/layout/dialogk_tip.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/dialogk_tip_txt"
-            style="@style/Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap"
+            style="@style/Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Norm.Color_Gray_999.Size_014.Width_Wrap.Height_Wrap"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/dp_010"
             tools:text="这是提示" />
