--- a/uicorek/src/main/res/values/colors.xml
+++ b/uicorek/src/main/res/values/colors.xml
@@ -200,6 +200,7 @@
     <color name="ui_gray_350">#D2D4D7</color>
     <color name="ui_gray_400">#BDBDBD</color>
     <color name="ui_gray_500">#9E9E9E</color>
+    <color name="ui_gray_555">#7D7D7D</color>
     <color name="ui_gray_600">#757575</color>
     <color name="ui_gray_700">#616161</color>
     <color name="ui_gray_800">#424242</color>
