--- a/uicorek/src/main/res/values/styles.xml
+++ b/uicorek/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:textStyle">normal</item>
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">sans-serif</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
