--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -40,6 +40,79 @@
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
     <!--layoutk-->
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!--layoutk_label_group-->
+    <declare-styleable name="LayoutKLabelGroup">
+        <attr name="layoutKLabelGroup_selectType" format="enum">
+            <enum name="NONE" value="1" />
+            <enum name="SINGLE" value="2" />
+            <enum name="SINGLE_IRREVOCABLY" value="3" />
+            <enum name="MULTI" value="4" />
+        </attr>
+        <attr name="layoutKLabelGroup_labelGravity">
+            <!-- Push object to the top of its container, not changing its size. -->
+            <flag name="top" value="0x30" />
+            <!-- Push object to the bottom of its container, not changing its size. -->
+            <flag name="bottom" value="0x50" />
+            <!-- Push object to the left of its container, not changing its size. -->
+            <flag name="left" value="0x03" />
+            <!-- Push object to the right of its container, not changing its size. -->
+            <flag name="right" value="0x05" />
+            <!-- Place object in the vertical center of its container, not changing its size. -->
+            <flag name="center_vertical" value="0x10" />
+            <!-- Grow the vertical size of the object if needed so it completely fills its container. -->
+            <flag name="fill_vertical" value="0x70" />
+            <!-- Place object in the horizontal center of its container, not changing its size. -->
+            <flag name="center_horizontal" value="0x01" />
+            <!-- Grow the horizontal size of the object if needed so it completely fills its container. -->
+            <flag name="fill_horizontal" value="0x07" />
+            <!-- Place the object in the center of its container in both the vertical and horizontal axis, not changing its size. -->
+            <flag name="center" value="0x11" />
+            <!-- Grow the horizontal and vertical size of the object if needed so it completely fills its container. -->
+            <flag name="fill" value="0x77" />
+            <!-- Additional option that can be set to have the top and/or bottom edges of
+                 the child clipped to its container's bounds.
+                 The clip will be based on the vertical gravity: a top gravity will clip the bottom
+                 edge, a bottom gravity will clip the top edge, and neither will clip both edges. -->
+            <flag name="clip_vertical" value="0x80" />
+            <!-- Additional option that can be set to have the left and/or right edges of
+                 the child clipped to its container's bounds.
+                 The clip will be based on the horizontal gravity: a left gravity will clip the right
+                 edge, a right gravity will clip the left edge, and neither will clip both edges. -->
+            <flag name="clip_horizontal" value="0x08" />
+            <!-- Push object to the beginning of its container, not changing its size. -->
+            <flag name="start" value="0x00800003" />
+            <!-- Push object to the end of its container, not changing its size. -->
+            <flag name="end" value="0x00800005" />
+        </attr>
+        <attr name="layoutKLabelGroup_maxSelect" format="integer" />
+        <attr name="layoutKLabelGroup_minSelect" format="integer" />
+        <attr name="layoutKLabelGroup_maxLines" format="integer" />
+        <attr name="layoutKLabelGroup_labelColumnCount" format="integer" />
+        <attr name="layoutKLabelGroup_isIndicator" format="boolean" />
+        <attr name="layoutKLabelGroup_labelTextColor" format="reference|color" />
+        <attr name="layoutKLabelGroup_labelTextSize" format="dimension" />
+        <attr name="layoutKLabelGroup_labelTextWidth" format="dimension">
+            <enum name="fill_parent" value="-1" />
+            <enum name="match_parent" value="-1" />
+            <enum name="wrap_content" value="-2" />
+        </attr>
+        <attr name="layoutKLabelGroup_labelTextHeight" format="dimension">
+            <enum name="fill_parent" value="-1" />
+            <enum name="match_parent" value="-1" />
+            <enum name="wrap_content" value="-2" />
+        </attr>
+        <attr name="layoutKLabelGroup_labelTextPadding" format="dimension" />
+        <attr name="layoutKLabelGroup_labelTextPaddingLeft" format="dimension" />
+        <attr name="layoutKLabelGroup_labelTextPaddingTop" format="dimension" />
+        <attr name="layoutKLabelGroup_labelTextPaddingRight" format="dimension" />
+        <attr name="layoutKLabelGroup_labelTextPaddingBottom" format="dimension" />
+        <attr name="layoutKLabelGroup_lineMargin" format="dimension" />
+        <attr name="layoutKLabelGroup_wordMargin" format="dimension" />
+        <attr name="layoutKLabelGroup_labelBackground" format="reference|color" />
+        <attr name="layoutKLabelGroup_singleLine" format="boolean" />
+        <attr name="layoutKLabelGroup_isTextBold" format="boolean" />
+    </declare-styleable>
+    <!--layoutk_roll_text-->
     <declare-styleable name="LayoutKRollText">
         <attr name="layoutKRollText_animatorMode" format="enum">
             <enum name="up" value="1" />
