--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -35,6 +35,7 @@
     <dimen name="dp_035">35dp</dimen>
     <dimen name="dp_040">40dp</dimen>
     <dimen name="dp_045">45dp</dimen>
+    <dimen name="dp_048">48dp</dimen>
     <dimen name="dp_050">50dp</dimen>
     <dimen name="dp_055">55dp</dimen>
     <dimen name="dp_060">60dp</dimen>
