--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -371,6 +371,22 @@
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
     <!--textk-->
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <declare-styleable name="TextKProgress">
+        <attr name="textKProgress_radius" format="dimension" />
+        <attr name="textKProgress_backgroundColor" format="color" />
+        <attr name="textKProgress_backgroundColorNormal" format="color" />
+        <attr name="textKProgress_backgroundColorSecond" format="color" />
+        <attr name="textKProgress_textColor" format="color" />
+        <attr name="textKProgress_textColorNormal" format="color" />
+        <attr name="textKProgress_textColorCover" format="color" />
+        <attr name="textKProgress_borderColor" format="color" />
+        <attr name="textKProgress_borderWidth" format="dimension" />
+        <attr name="textKProgress_ballStyle" format="enum">
+            <enum name="pulse" value="1" />
+            <enum name="jump" value="2" />
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="TextKProgressDownload">
         <attr name="textKProgressDownload_radius" format="dimension" />
         <attr name="textKProgressDownload_backgroundColor" format="color" />
