--- a/basicktest/src/main/res/layout/activity_utilk_android.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_android.xml
@@ -47,6 +47,12 @@
 
         <com.google.android.material.button.MaterialButton
             style="@style/Btn_Style"
+            android:onClick="goUtilKLaunchActivity"
+            android:text="goUtilKLaunchActivity"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Btn_Style"
             android:onClick="goUtilKScreen"
             android:text="goUtilKScreen"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
