--- a/uicorektest/src/main/res/layout/activity_textk.xml
+++ b/uicorektest/src/main/res/layout/activity_textk.xml
@@ -45,7 +45,7 @@
             android:background="@drawable/textk_edit_form"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-        <com.mozhimen.uicorek.textk.TextKProgressDownload
+        <com.mozhimen.uicorek.textk.progress.TextKProgress
             android:text="123"
             android:id="@+id/textk_progress"
             android:layout_width="match_parent"
