--- a/uicorektest/src/main/res/layout/activity_textk.xml
+++ b/uicorektest/src/main/res/layout/activity_textk.xml
@@ -46,8 +46,13 @@
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <com.mozhimen.uicorek.textk.progress.TextKProgress
-            android:text="123"
             android:id="@+id/textk_progress"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <com.mozhimen.uicorek.textk.progress.TextKProgress
+            android:id="@+id/textk_progress1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
